Archive2/89/9409cb2050579e/output
main.cpp:20:5: error: member reference type 'B *' is a pointer; maybe you meant to use '->'?
   i.get();
   ~^
    ->
main.cpp:20:6: error: 'get' is a private member of 'B'
   i.get();
     ^
main.cpp:8:9: note: implicitly declared private here
   void get();
        ^
2 errors generated.
